--- a/amazon-dynamodb-quickstart/src/main/resources/META-INF/resources/async-fruits.html
+++ b/amazon-dynamodb-quickstart/src/main/resources/META-INF/resources/async-fruits.html
@@ -70,7 +70,7 @@
 <body ng-app="FruitManagement" ng-controller="FruitManagementController">
 
 <div class="container">
-    <h1>Async REST Service - Fruit</h1>
+    <h1>Async DynamoDB-REST Service - Fruit - Fruit</h1>
 
     <h3>Add a fruit</h3>
     <form ng-submit="add()">
